--- a/css/style.css
+++ b/css/style.css
@@ -101,16 +101,15 @@ padding : 0; }
 /* 1.ROOT */
 
 html {
-overflow-y : scroll;
-background : url(../img/bg-body.jpg)repeat top left; }
+  background : #fff;
+  color: #333;
+}
 
 body {
 margin : 0 auto;
 padding : 24px 0;
-width : 90% /* 252px */;
 font : 75%/1.4 'Droid Sans',sans-serif;
-color : #223035;
-background-color : transparent; }
+}
 
 /* 2.HEADINGS */
 
@@ -126,20 +125,19 @@ h6,
   font-family : 'Droid Sans', sans-serif;
   font-weight: 700;
   font-size: 50%;
-  text-shadow: 0 1px 1px #666;
 }
 
 
 
 h1, h2 {
-  margin-bottom : .75em;
+  margin-bottom : 0.5em;
   font-size : 3em;
   line-height : 1.2;
   color: #1ea0ce;
 }
 
 h3, h4 {
-  margin-bottom : 1em;
+  margin-bottom : 0.5em;
   font-size : 1.5em;
   line-height : 1.3;
 }
@@ -148,7 +146,6 @@ h5, .speaker-name {
   margin-bottom : 1.25em;
   font-size : 1.25em;
   line-height : 1.25;
-  text-shadow: none;
 }
 
 h6 {
@@ -159,10 +156,6 @@ h6 {
 
 .empty h3,h4,h5,h6 {
   color: #223035;
-}
-
-h3,h4,h5,h6 {
-  text-shadow: none;
 }
 
 /* 3.TYPOGRAPHY */
@@ -363,7 +356,8 @@ h1 span {
 }
 
 .logo {
-  width: 260px;
+  display: block;
+  width: 150px;
   margin: 0 auto 10px auto;
 }
 img.logo.logo-default, img.logo.logo-2x {
@@ -407,13 +401,15 @@ img.logo.logo-s{
 /* 10.CONTENT */
 
 .content {
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 /* --- Reject.JS Final Header --- */
 
 .special-announcement {
   position: relative;
-  background: url(http://rejectjs.org/images/bg_body.gif);
   border: 10px solid #E1E1E1;
   box-shadow: 0 0 10px #888;
   margin: 2em 0;
@@ -497,11 +493,15 @@ img.logo.logo-s{
 }
 
 .speaker {
-  padding: 10px;
+  padding: 20px;
   margin-bottom: 10px;
-  border: 5px solid #fff;
+  min-height: 14em;
   background: #e1e1e1;
-  box-shadow: 1px 1px 10px #ababab;
+  border: 10px solid #e1e1e1;
+}
+
+.speaker :last-child {
+  margin-bottom: 0;
 }
 
 .speaker li {
@@ -554,9 +554,10 @@ iframe {
 .two-cols,
 .three-cols,
 .four-cols {
-  margin: 10px 0 0 3%;
+  margin: 10px 0 0 0;
 }
 
+.one-col > div,
 .three-cols > div {
   width: 100%;
   padding: 10px;
@@ -646,8 +647,6 @@ article {
 footer {
   margin-top: 20px;
   padding: 20px 0;
-  border-top: 1px solid #223035;
-  background: none;
 }
 
 footer ul {
@@ -656,8 +655,6 @@ footer ul {
 
 footer h2 {
   color: #223035;
-  text-shadow: none;
-  margin-bottom: 1em;
   font-size: 2em;
 }
 
@@ -683,32 +680,27 @@ clear : both; }
 
 body {
 -webkit-text-size-adjust : 100%;
--ms-text-size-adjust : 100%; }
+-ms-text-size-adjust : 100%;
+}
 
 a:link {
--webkit-tap-highlight-color : rgb(52,158,219); }
+  -webkit-tap-highlight-color : rgb(52,158,219);
+}
 
 ::-webkit-selection {
-background : rgb(23,119,175);
-color : rgb(250,250,250);
-text-shadow : none; }
+  background : rgb(23,119,175);
+  color : rgb(250,250,250);
+}
 
 ::-moz-selection {
-background : rgb(23,119,175);
-color : rgb(250,250,250);
-text-shadow : none; }
+  background : rgb(23,119,175);
+  color : rgb(250,250,250);
+}
 
 ::selection {
-background : rgb(23,119,175);
-color : rgb(250,250,250);
-text-shadow : none; }
-
-/* input[type=search] {
--webkit-appearance : none; }
-
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
-display : none; } */
+  background : rgb(23,119,175);
+  color : rgb(250,250,250);
+}
 
 ::-webkit-input-placeholder {
 padding : 10px;
